--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
   "epsilon": 0.3,
   "k": 10, 
   "a": 0.1,
-  "random_start": false,
+  "random_start": true,
   "loss_func": "cw",
   "store_adv_path": "adv_1_0_mnist_natural.npy"
 }
